--- a/src/style/scss/_global.scss
+++ b/src/style/scss/_global.scss
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+body{
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #1D1D1B;
+}
+
 h1, h2 {
   margin: 0;
 }
@@ -22,4 +30,9 @@ a {
 img {
   display: block;
   width: 100%;
+}
+
+.container{
+  max-width: 1520px;
+  margin: 0 auto;
 }
